tests/format/misc/errors/js/hack-pipeline/v8intrinsic.js
const status = %GetOptimizationStatus(fn) |> console.log(%);
